--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TheArk - Paper Management System</title>
-    <link rel="stylesheet" href="/static/css/main.css">
+    <!-- Modular CSS files -->
+    <link rel="stylesheet" href="/static/css/base.css">
+    <link rel="stylesheet" href="/static/css/components.css">
+    <link rel="stylesheet" href="/static/css/papers.css">
+    <link rel="stylesheet" href="/static/css/responsive.css">
     <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
 </head>
 
