--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/static/css/base.css">
     <link rel="stylesheet" href="/static/css/components.css">
     <link rel="stylesheet" href="/static/css/papers.css">
+    <link rel="stylesheet" href="/static/css/star-button.css">
     <link rel="stylesheet" href="/static/css/responsive.css">
     <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
 </head>
