--- a/static/css/components.css
+++ b/static/css/components.css
@@ -163,9 +163,11 @@
     padding: 1rem;
     max-width: 720px;
     max-height: 80vh;
-    overflow: visible !important;
-    position: relative !important;
+    overflow: visible;
+    position: relative;
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
 }
 
 .modal-header {
@@ -206,6 +208,9 @@
 .modal-body {
     line-height: 1.6;
     color: #333;
+    overflow-y: auto;
+    flex: 1;
+    padding-right: 0.5rem;
 }
 
 .modal-body p {
@@ -292,11 +297,11 @@
 }
 
 /* Modal relevance tag */
-.relevance-tag-container {
+.modal-tag-container .relevance-tag-container {
     position: absolute !important;
-    top: -15px !important;
-    left: -20px !important;
-    z-index: 1001 !important;
+    top: 0 !important;
+    left: 0 !important;
+    z-index: 1002 !important;
     display: block !important;
 }
 
