--- a/templates/index.html
+++ b/templates/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TheArk - Paper Management System</title>
+    <title>TheArk</title>
     <!-- Modular CSS files -->
     <link rel="stylesheet" href="/static/css/base.css">
     <link rel="stylesheet" href="/static/css/components.css">
     <link rel="stylesheet" href="/static/css/papers.css">
     <link rel="stylesheet" href="/static/css/star-button.css">
+    <link rel="stylesheet" href="/static/css/modal.css">
     <link rel="stylesheet" href="/static/css/responsive.css">
     <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
 </head>
@@ -67,6 +68,11 @@
 
     <!-- JavaScript Modules -->
     <script src="/static/js/api.js"></script>
+    <script src="/static/js/ui/star-manager.js"></script>
+    <script src="/static/js/ui/loading-indicators.js"></script>
+    <script src="/static/js/ui/modal-manager.js"></script>
+    <script src="/static/js/ui/paper-list-manager.js"></script>
+    <script src="/static/js/ui/utility-manager.js"></script>
     <script src="/static/js/ui.js"></script>
     <script src="/static/js/infinite-scroll.js"></script>
     <script src="/static/js/paper-manager.js"></script>
