Initial BG crawler (without integration)

--- a/templates/index.html
+++ b/templates/index.html
@@ -62,17 +62,8 @@
         <p>&copy; 2025 Sanghyun Son.</p>
     </footer>
 
-    <!-- JavaScript Modules -->
-    <script src="/static/js/api.js"></script>
-    <script src="/static/js/ui/star-manager.js"></script>
-    <script src="/static/js/ui/loading-indicators.js"></script>
-    <script src="/static/js/ui/modal-manager.js"></script>
-    <script src="/static/js/ui/paper-list-manager.js"></script>
-    <script src="/static/js/ui/utility-manager.js"></script>
-    <script src="/static/js/ui.js"></script>
-    <script src="/static/js/infinite-scroll.js"></script>
-    <script src="/static/js/paper-manager.js"></script>
-    <script src="/static/js/main.js"></script>
+    <!-- Modern JavaScript entry point -->
+    <script type="module" src="/static/js/main.js"></script>
 </body>
 
 </html>
