--- a/static/css/main.css
+++ b/static/css/main.css
@@ -513,8 +513,7 @@ sm.github-link {
     background: var(--container-background-color);
     border: 1px solid var(--border-color);
     border-radius: var(--border-radius-lg);
-    padding: var(--spacing-sm);
-    padding-top: var(--spacing-xs);
+    padding: var(--spacing-xs) var(--spacing-sm) var(--spacing-xs) var(--spacing-sm);
     margin-left: var(--spacing-sm);
     margin-right: var(--spacing-lg);
     box-shadow: var(--box-shadow-sm);
