Update integration test

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,6 +56,22 @@
                         </label>
                         <span class="toggle-switch-text">🎯 Relevance</span>
                     </div>
+                    <div class="toggle-switch">
+                        <input type="checkbox" id="prioritize-starred" class="toggle-switch-checkbox">
+                        <label class="toggle-switch-label" for="prioritize-starred">
+                            <span class="toggle-switch-inner"></span>
+                            <span class="toggle-switch-switch"></span>
+                        </label>
+                        <span class="toggle-switch-text">⭐ Starred</span>
+                    </div>
+                    <div class="toggle-switch">
+                        <input type="checkbox" id="prioritize-read" class="toggle-switch-checkbox">
+                        <label class="toggle-switch-label" for="prioritize-read">
+                            <span class="toggle-switch-inner"></span>
+                            <span class="toggle-switch-switch"></span>
+                        </label>
+                        <span class="toggle-switch-text">👁️ Read</span>
+                    </div>
                 </div>
             </form>
 
